uploaded from windows 11 WSL

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+#to solve the -append_path error
+#set-option -g default-command '/bin/bash'
+set-option -g default-command '/usr/bin/zsh'
+
 #remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -15,6 +19,12 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+#switch panes using Alt-arrow without prefix
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
 ###################### 
 ### DESIGN CHANGES ### 
@@ -49,3 +59,4 @@ setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages 
 set -g message-style 'fg=colour255 bg=colour233'
+
